changed api call from enterlink to demo

--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body class="cbp-spmenu-push">
-    <form action="/enterlink" method="post">
+    <form action="/demo" method="post">
         <div class="container-fluid" style="background:initial;">
             <div class="jumbotron">
                 <main>
