--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html lang="en">
 <!--<![endif]-->
-<head>
+<head style="margin: 0; padding: 0;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/manifest.json">
 </head>
-<body>
-    <iframe src={{.}} frameborder="0" allowfullscreen style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;margin:0;position:absolute;top:0px;left:0px;right:0px;bottom:0px;border:none;"></iframe>
+<body style="margin: 0; padding: 0;">
+    <iframe src={{.}} frameborder="0" allowfullscreen style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px;border:none;"></iframe>
 </body>
 </html>
